--- a/ntv_pandas/ntv_table.ini
+++ b/ntv_pandas/ntv_table.ini
@@ -31,14 +31,19 @@ mapping = [
     ["point",	    "array",	    "geopoint"   ],
     ["geojson",	    "default",  	"geojson"    ],
     ["month",	    "default",	    "yearmonth"  ],
-    ["year",	    "default",	    "year"       ]
+    ["year",	    "default",	    "year"       ],
+
+    ["int64",       "int64",	"number"           ],
+    ["float64",	    "float64",	"number"           ],
+    ["float",	    "float",	"number"           ]
+
     ]
 
 # define the types without TableSchema specification
 othertype = [
-    ["int64",       "int64",	"Int64"             ],
-    ["float64",	    "float64",	"Float64"           ],
-    ["float",	    "float",	"Float64"           ],
+    ["int64",       "int64",	"number"             ],
+    ["float64",	    "float64",	"number"           ],
+    ["float",	    "float",	"number"           ],
     ["float16",	    null,	    "Float16"           ],
     ["float32",	    null,	    "Float32"           ],
     ["uint8",	    null,	    "UInt8"             ],
