--- a/ntv_pandas/ntv_table.ini
+++ b/ntv_pandas/ntv_table.ini
@@ -33,40 +33,42 @@ mapping = [
     ["month",	    "default",	    "yearmonth"  ],
     ["year",	    "default",	    "year"       ],
 
+    # types without TableSchema specification
     ["int64",       "int64",	"number"           ],
     ["float64",	    "float64",	"number"           ],
-    ["float",	    "float",	"number"           ]
+    ["float",	    "float",	"number"           ],
+    ["int32",	    "int32",	"number"           ],
+    ["float16",	    "float16",	"number"           ],
+    ["float32",	    "float32",	"number"           ],
+    ["uint8",	    "uint8",	"number"           ],
+    ["uint16",	    "uint16",	"number"           ],
+    ["uint32",	    "uint32",	"number"           ],
+    ["uint64",	    "uint64", 	"number"           ],
+    ["int8",	    "int8",	    "number"           ],
+    ["int16",	    "int16",	"number"           ],
+
+    ["day",	        "day",	    "integer"          ],
+    ["wday",	    "wday",	    "integer"          ],
+    ["yday",	    "yday",	    "integer"          ],
+    ["week",	    "week",	    "integer"          ],
+    ["hour",	    "hour",	    "integer"          ],
+    ["minute",	    "minute",	"integer"          ],
+    ["second",	    "second",	"integer"          ],
+
+    ["geometry",    "geometry",	"geojson"          ],
+    ["polygon",	    "polygon",	"geojson"          ],
+    ["line",	    "line",	    "geojson"          ],
+
+    ["null",	    "null", 	"object"           ],
+    ["file",	    "file",	    "string"           ],
+    ["object",	    "object",	"object"           ]
+
+    #["period",	    "period",	"string"            ],
 
     ]
 
 # define the types without TableSchema specification
 othertype = [
-    ["int64",       "int64",	"number"             ],
-    ["float64",	    "float64",	"number"           ],
-    ["float",	    "float",	"number"           ],
-    ["float16",	    null,	    "Float16"           ],
-    ["float32",	    null,	    "Float32"           ],
-    ["uint8",	    null,	    "UInt8"             ],
-    ["uint16",	    null,	    "UInt16"            ],
-    ["uint32",	    null,	    "UInt32"            ],
-    ["uint64",	    null, 	    "UInt64"            ],
-    ["int8",	    null,	    "Int8"              ],
-    ["int16",	    null,	    "Int16"             ],
-    ["int32",	    null,	    "Int32"             ],
-    ["object",	    "object",	"object"            ],
-    ["null",	    "null", 	"object"            ],
-    ["period",	    "period",	"string"            ],
-    ["file",	    "file",	    "string"            ],
-    ["line",	    "line",	    "object"            ],
-    ["polygon",	    "polygon",	"object"            ],
-    ["geometry",    "geometry",	"object"            ],
-    ["day",	        "day",	    null                ],
-    ["wday",	    "wday",	    null                ],
-    ["yday",	    "yday",	    null                ],
-    ["week",	    "week",	    null                ],
-    ["hour",	    "hour",	    null                ],
-    ["minute",	    "minute",	null                ],
-    ["second",	    "second",	null                ]
     ["dat",	            "dat",	        "object"    ],
     ["multipoint",	    "multipoint",   "object"    ],
     ["multiline",	    "multiline",    "object"    ],
