--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,23 @@
-
-*.pyc
+build/
+dist/
+__pycache__/
+Project1/
+*.so
+*.il
+*.ob
+*.obs
+*.py[cod]
+*.stats
+*.sln
+*.filters
+*.user
+*.bak
+.vs/
+.ipynb_checkpoints/
+.spyproject/
+*checkpoints.ipynb
+*~
+.pylint.d/
+.cache
+.vscode
+.gitignore
