--- a/ntv_pandas/ntv_table.ini
+++ b/ntv_pandas/ntv_table.ini
@@ -67,6 +67,16 @@ mapping = [
 
     ]
 
+col_type = [ "ntv_type", "name_type", "dtype" ]
+type   = [
+
+    # specif ntv_type if name_type is null
+    # column: ntv_type, name_type, dtype 
+    ["int",	        null,	"int64"             ],
+    ["float",	    null,	"float64"           ],
+    ["number",	    null,	"float64"           ]
+    ]
+
 # define the types without TableSchema specification
 othertype = [
     ["dat",	            "dat",	        "object"    ],
