--- a/ntv_pandas/ntv_table.ini
+++ b/ntv_pandas/ntv_table.ini
@@ -34,19 +34,19 @@ mapping = [
     ["year",	    "default",	    "year"       ],
 
     # types without TableSchema specification
-    ["int64",       "int64",	"number"           ],
     ["float64",	    "float64",	"number"           ],
     ["float",	    "float",	"number"           ],
-    ["int32",	    "int32",	"number"           ],
     ["float16",	    "float16",	"number"           ],
     ["float32",	    "float32",	"number"           ],
-    ["uint8",	    "uint8",	"number"           ],
-    ["uint16",	    "uint16",	"number"           ],
-    ["uint32",	    "uint32",	"number"           ],
-    ["uint64",	    "uint64", 	"number"           ],
-    ["int8",	    "int8",	    "number"           ],
-    ["int16",	    "int16",	"number"           ],
 
+    ["uint8",	    "uint8",	"integer"           ],
+    ["uint16",	    "uint16",	"integer"           ],
+    ["uint32",	    "uint32",	"integer"           ],
+    ["uint64",	    "uint64", 	"integer"           ],
+    ["int8",	    "int8",	    "integer"           ],
+    ["int16",	    "int16",	"integer"           ],
+    ["int32",	    "int32",	"integer"           ],
+    ["int64",       "int64",	"integer"           ],
     ["day",	        "day",	    "integer"          ],
     ["wday",	    "wday",	    "integer"          ],
     ["yday",	    "yday",	    "integer"          ],
@@ -73,7 +73,9 @@ type   = [
     # specif ntv_type if name_type is null
     # column: ntv_type, name_type, dtype 
     ["int",	        null,	"int64"             ],
-    ["float",	    null,	"float64"           ],
+    #["float",	    null,	"float64"           ],
+    ["json",	    null,	"object"            ],
+    ["boolean",	    null,	"boolean"           ],
     ["number",	    null,	"float64"           ]
     ]
 
