--- a/ntv_pandas/ntv_table.ini
+++ b/ntv_pandas/ntv_table.ini
@@ -1,96 +1,88 @@
 [data]
 
 # define the categories of data defined in 'type'
-column = [
-    
+column = ["ntv_type", "format", "type"]
     # 'ntv_type' is the type of the data 
-    "ntv_type", 
-    
     # 'format' is defined in TableSchema specification
-    "format", 
-    
     # 'type' is defined in TableSchema specification
-    "type"
-    ]
 
 # mapping between NTVtype and TableSchema
 mapping = [
-
-    ["duration",	"default",	    "duration"   ],
-    ["datetime",	"default",	    "datetime"   ],
-    ["string",	    "default",	    "string"     ],
-    ["json",	    "default", 	    "object"     ],
+    # numerical
     ["int",	        "default",	    "integer"    ],
     ["number",	    "default",	    "number"     ],
     ["boolean",	    "default",	    "boolean"    ],
-    ["array",	    "default",	    "array"      ],
+    # json
+    ["string",	    "default",	    "string"     ],
     ["uri",	        "uri",	        "string"     ],
     ["email",	    "email",	    "string"     ],
+    ["json",	    "default", 	    "object"     ],
+    ["array",	    "default",	    "array"      ],
+    # datation
+    ["duration",	"default",	    "duration"   ],
+    ["datetime",	"default",	    "datetime"   ],
     ["date",	    "default",	    "date"       ], 
     ["time",	    "default",	    "time"       ],
-    ["point",	    "array",	    "geopoint"   ],
-    ["geojson",	    "default",  	"geojson"    ],
     ["month",	    "default",	    "yearmonth"  ],
     ["year",	    "default",	    "year"       ],
+    # location
+    ["point",	    "array",	    "geopoint"   ],
+    ["geojson",	    "default",  	"geojson"    ],
 
     # types without TableSchema specification
-    ["float64",	    "float64",	"number"           ],
-    ["float",	    "float",	"number"           ],
-    ["float16",	    "float16",	"number"           ],
-    ["float32",	    "float32",	"number"           ],
-
-    ["uint8",	    "uint8",	"integer"           ],
-    ["uint16",	    "uint16",	"integer"           ],
-    ["uint32",	    "uint32",	"integer"           ],
-    ["uint64",	    "uint64", 	"integer"           ],
-    ["int8",	    "int8",	    "integer"           ],
-    ["int16",	    "int16",	"integer"           ],
-    ["int32",	    "int32",	"integer"           ],
-    ["int64",       "int64",	"integer"           ],
-    ["day",	        "day",	    "integer"          ],
-    ["wday",	    "wday",	    "integer"          ],
-    ["yday",	    "yday",	    "integer"          ],
-    ["week",	    "week",	    "integer"          ],
-    ["hour",	    "hour",	    "integer"          ],
-    ["minute",	    "minute",	"integer"          ],
-    ["second",	    "second",	"integer"          ],
-
-    ["geometry",    "geometry",	"geojson"          ],
-    ["polygon",	    "polygon",	"geojson"          ],
-    ["line",	    "line",	    "geojson"          ],
-
-    ["null",	    "null", 	"object"           ],
-    ["file",	    "file",	    "string"           ],
-    ["object",	    "object",	"object"           ]
-
-    #["period",	    "period",	"string"            ],
-
+    # numerical 
+    ["float64",	    "float64",	"number"         ],
+    ["float",	    "float",	"number"         ],
+    ["float16",	    "float16",	"number"         ],
+    ["float32",	    "float32",	"number"         ],
+    ["uint8",	    "uint8",	"integer"        ],
+    ["uint16",	    "uint16",	"integer"        ],
+    ["uint32",	    "uint32",	"integer"        ],
+    ["uint64",	    "uint64", 	"integer"        ],
+    ["int8",	    "int8",	    "integer"        ],
+    ["int16",	    "int16",	"integer"        ],
+    ["int32",	    "int32",	"integer"        ],
+    ["int64",       "int64",	"integer"        ],
+    # json
+    ["file",	    "file",	    "string"         ],
+    ["null",	    "null", 	"object"         ],
+    ["object",	    "object",	"object"         ],
+    # datation
+    ["day",	        "day",	    "date"           ],
+    ["wday",	    "wday",	    "date"           ],
+    ["yday",	    "yday",	    "date"           ],
+    ["week",	    "week",	    "date"           ],
+    ["hour",	    "hour",	    "time"           ],
+    ["minute",	    "minute",	"time"           ],
+    ["second",	    "second",	"time"           ],
+    #["period",	    "period",	"duration"       ],
+    # location
+    ["geometry",    "geometry",	"geojson"        ],
+    ["polygon",	    "polygon",	"geojson"        ],
+    ["line",	    "line",	    "geojson"        ]
     ]
 
+# specific ntv_type if name_type is null
 col_type = [ "ntv_type", "name_type", "dtype" ]
 type   = [
-
-    # specif ntv_type if name_type is null
-    # column: ntv_type, name_type, dtype 
-    ["int",	        null,	"int64"             ],
-    #["float",	    null,	"float64"           ],
-    ["json",	    null,	"object"            ],
-    ["boolean",	    null,	"boolean"           ],
-    ["number",	    null,	"float64"           ]
+    ["int",	        null,	    "int64"          ],
+    ["json",	    null,	    "object"         ],
+    ["boolean",	    null,	    "boolean"        ],
+    ["number",	    null,	    "float64"        ]
     ]
 
 # define the types without TableSchema specification
 othertype = [
-    ["dat",	            "dat",	        "object"    ],
-    ["multipoint",	    "multipoint",   "object"    ],
-    ["multiline",	    "multiline",    "object"    ],
-    ["multipolygon",	"multipolygon",	"object"    ],
-    ["box",	            "box",	        "object"    ],
-    ["codeolc",	        "codeolc",	    "object"    ],
-    ["row",	            "row",	        "object"    ],
-    ["field",	        "field",	    "object"    ],
-    ["tab",	            "tab",	        "object"    ],
-    ["ntv",	            "ntv",	        "object"    ]
+    ["dat",	            "dat",	        "object" ],
+    ["multipoint",	    "multipoint",   "object" ],
+    ["multiline",	    "multiline",    "object" ],
+    ["multipolygon",	"multipolygon",	"object" ],
+    ["box",	            "box",	        "object" ],
+    ["codeolc",	        "codeolc",	    "object" ],
+    ["row",	            "row",	        "object" ],
+    ["field",	        "field",	    "object" ],
+    ["tab",	            "tab",	        "object" ],
+    ["ntv",	            "ntv",	        "object" ]
     ]
 
 # repace (\w+) -> "$1",
