--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
+*_autosummary/
+_build/
 build/
 dist/
 __pycache__/
-ntv_pandas.egg-info/
 Project1/
 *.so
 *.il
@@ -15,15 +16,14 @@ Project1/
 *.bak
 .vs/
 .ipynb_checkpoints/
-.spyproject/
 *checkpoints.ipynb
+*checkpoint.ipynb
 *~
 .pylint.d/
 .cache
 .vscode
-.gitignore
-ntv_pandas.egg-info/dependency_links.txt
-ntv_pandas.egg-info/PKG-INFO
-ntv_pandas.egg-info/requires.txt
-ntv_pandas.egg-info/SOURCES.txt
-ntv_pandas.egg-info/top_level.txt
+*.gitignore
+python/Tests/test.il
+python/.spyproject/config/workspace.ini
+*.il
+*.egg-info/
